Fixed too small font for git+ info view.

--- a/styles.less
+++ b/styles.less
@@ -15,6 +15,11 @@ html, body, .tree-view, .tab-bar .tab {
   }
 }
 
+// Override the tiny fonts in git+ info view.
+.git-plus.info-view {
+  pre { font-size: 15px; }
+}
+
 // Override the background and gutter colors for the Pubster theme (which has better Markdown support).
 .theme-pubster-syntax atom-text-editor {
   background-color: hsl(222, 11%, 0%);
